# simplebump

./: CMakeLists.txt  src_path.h.in
source/: CMakeLists.txt  NormalisationCubeMap.cpp  TORUS.cpp  a.out.js  main.cpp  src_path.h
source/Image/: IMAGE.h  IMAGE_CalculateStride.cpp  IMAGE_ExpandPalette.cpp  IMAGE_Load.cpp  IMAGE_Load24BitBMP.cpp  IMAGE_Load8BitBMP.cpp  IMAGE_LoadAlpha.cpp  IMAGE_LoadBMP.cpp  IMAGE_LoadCompressedTrueColorTGA.cpp  IMAGE_LoadTGA.cpp  IMAGE_LoadUncompressed8BitTGA.cpp  IMAGE_LoadUncompressedTrueColorTGA.cpp  Image.cpp
source/textures/: Decal.ppm  Decal.raw  NormalMap.raw
